# vanilla.robotix.MikeCore

./: .gitignore  install.sh  maxsizeproc.py  run.sh
.catkin_tools/profiles/default/: config.yaml  devel_collisions.txt
camera/: CMakeLists.txt  package.xml  run.sh
camera/src/: cmd.py
docs/: .python3ROS.md.swp  BeforeCompile.md  BeforeCompileCameraCSI.md  cvBridgePython3.md  flipImageJetsonCamera.md  python3ROS.md  run_trt.sh
docs/mike-motors/: wiki.txt
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
install/lib/pkgconfig/: catkin_tools_prebuild.pc  cv_bridge.pc  inference.pc  ydlidar_ros.pc
install/lib/ydlidar_ros/: ydlidar_client  ydlidar_node
install/share/inference/: package.xml
lidar/: CMakeLists.txt  package.xml  run.sh
logs/cv_bridge/: build.check.000.log.stderr  build.make.000.log.stderr
network/: CMakeLists.txt
network/msg/: Call.msg
network/src/: main.cpp  network.h
src/: .gitignore
src/box_finder/: CMakeLists.txt  package.xml
src/box_finder/config/: base_local_planner_params.yaml  blpp_more_tolerance.yaml  costmap_common_params.yaml  global_costmap_params.yaml  init_pose.yaml  local_costmap_params.yaml  move_base_params.yaml
src/box_finder/config2/: base_local_planner_params.yaml
src/box_finder/launch/: amcl.launch  automapping.launch  gmapping.launch  run_move_base.launch
src/box_finder/param/: costmap_common_params.yaml
src/box_finder/rviz/: first_stage.rviz
src/box_finder/src/: MoveToTableNode.cpp  RobotClass.cpp
src/camera/: .gitignore  CMakeLists.txt  package.xml  run.sh
src/camera/src/: main.cpp
src/camera_csi/: CMakeLists.txt  package.xml
src/camera_csi/src/: jetbot_camera.cpp
src/camera_csi_jetson/: CMakeLists.txt  package.xml
src/camera_csi_old/: .gitignore  CMakeLists.txt
src/cartographer_ydlidar/: CMakeLists.txt
src/cartographer_ydlidar/configuration_files/: ydlidar+imu.lua  ydlidar_2d.lua
src/cartographer_ydlidar/launch/: scan.launch  ydlidar_2d.launch  ydlidar_2d_only.launch  ydlidar_2d_rviz.launch  ydlidar_2d_rviz_only.launch
src/diff_wheeled_robot_gazebo/: CMakeLists.txt
src/diff_wheeled_robot_gazebo/launch/: diff_wheeled_gazebo.launch  diff_wheeled_gazebo_full.launch  mike_robot.launch
src/driver_node/: CMakeLists.txt
src/driver_node/src/: driver_node  driver_node_all_gpio  driver_test_node  driver_test_node.py
src/encoder-package/: CMakeLists.txt  package.xml
src/encoder-package/scripts/: encoders.py
src/encoder-package/src/: encoders.cpp
src/exporter/: CMakeLists.txt  exporter.rviz  package.xml
src/exporter/scripts/: exporter_laser.py
src/gpio_jetson/: CMakeLists.txt  package.xml
src/gpio_jetson/docs/: ifrootrequires.txt
src/gpio_jetson/src/: gpio_jetson_control.cpp  gpio_jetson_node.cpp  gpio_jetson_test.cpp
src/gpio_jetson_python/: CMakeLists.txt  package.xml
src/gpio_jetson_python/src/: gpio_jetson_node.py
src/gpio_jetson_service/: CMakeLists.txt  package.xml
src/gpio_jetson_service/action/: Move.action
src/gpio_jetson_service/scripts/: gpio_constants.py  gpio_jetson_service_python.py  gpio_movement.py
src/gpio_jetson_service/src/: .gpio_service.cpp.swp  commands.cpp  gpio_jetson_server-actionlib.cpp  gpio_jetson_server.cpp  gpio_service.cpp  manual_control.cpp  manual_full_control.cpp  movement.cpp
src/gpio_jetson_service/srv/: .gpio_service.srv.swp  gpio_srv.srv
src/hard_drive/: CMakeLists.txt  package.xml
src/hard_drive/src/: .main.cpp.swp  main.cpp
src/husky_cartographer_navigation/config/: husky.lua
src/husky_cartographer_navigation/launch/: cartographer_demo.launch
src/husky_navigation/: CMakeLists.txt
src/husky_navigation/config/: costmap_common.yaml  planner.yaml
src/imu_bno055/: CMakeLists.txt
src/inference/: .gitignore  CMakeLists.txt  package.xml  typescript
src/jetson_camera_csi/: CMakeLists.txt  package.xml
src/lidar/: run.sh
src/mastering_ros_robot_description_pkg/: CMakeLists.txt
src/movement/: CMakeLists.txt  package.xml
src/my_robot_base/: CMakeLists.txt
src/my_robot_control/: CMakeLists.txt  package.xml
src/my_robot_description/: CMakeLists.txt
src/network/: package.xml
src/path_driver/: CMakeLists.txt  package.xml
src/rosbook/: CMakeLists.txt  package.xml
src/scantopcl/: CMakeLists.txt  package.xml
src/ydlidar_ros/: CMakeLists.txt
src/ydlidar_unity/: CMakeLists.txt  package.xml
(+109 files in other folders)
